--- a/circle.yml
+++ b/circle.yml
@@ -6,9 +6,15 @@ dependencies:
   override:
     - docker build -t 7imbrook/life:count .
 
+test:
+  override:
+    - docker run -d -p 9000:80 7imbrook/life:count
+    - curl curl --retry 10 --retry-delay 5 -v http://localhost:9000
+
 deployment:
   hub:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push 7imbrook/life:count
+      - docker run --rm -ti -v /var/run/docker.sock:/var/run/docker.sock -e DOCKER_HOST dockercloud/client 7imbrook/aws
