--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
 test:
   override:
     - docker run -d -p 9000:80 7imbrook/life:count
-    - curl curl --retry 10 --retry-delay 5 -v http://localhost:9000
+    - curl curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9000
 
 deployment:
   hub:
